# docker-wasm-cmake-gtest

./: CMakeLists.txt  hello.cpp  run_test.sh  wasm.cpp  wasm.hpp  wasm_perf.cpp  wasm_test.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yml  build.yml
dev/bench/: data.js
